--- a/.github/workflows/compile-docs.yaml
+++ b/.github/workflows/compile-docs.yaml
@@ -53,8 +53,7 @@ jobs:
         run: |
           export PATH="$PATH:$(pwd)"
           ./compile-all \
-            --font-path ibm-plex/IBM-Plex-Mono \
-            --font-path ibm-plex/IBM-Plex-Sans \
+            --font-path ibm-plex/IBM-Plex-Serif \
       - uses: actions/upload-artifact@v4
         with:
           name: interpretation
